LIMA-361: Fixed top ads horizontal alignment

--- a/compiled/css/style_split_2.css
+++ b/compiled/css/style_split_2.css
@@ -1152,8 +1152,8 @@ span.sprite-icons.webmaster-border {
 }
 
 .visual-block > * {
-  margin-left: auto;
-  margin-right: auto;
+  margin-left: auto !important;
+  margin-right: auto !important;
 }
 
 .visual-bg {
@@ -1180,7 +1180,7 @@ span.sprite-icons.webmaster-border {
 
 .visual-top > * {
   display: block;
-  margin: 0 auto;
+  margin: 0 auto !important;
 }
 
 .visual-top-bg {
